--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "base64-url": "^1.3.3",
     "body-parser": "^1.15.2",
     "bunyan": "^1.8.1",
+    "cropjs": "^1.0.3",
     "crypto": "0.0.3",
     "detect-browser": "^1.5.0",
     "express": "^4.14.0",
