--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.15.1",
     "read-chunk": "^2.0.0",
     "request": "^2.75.0",
+    "request-debug": "^0.2.0",
     "request-promise": "^4.1.1",
     "response-time": "^2.3.1",
     "uuidv5": "0.0.1",
