--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "test-coverage": "jest --coverage",
     "webpack": "webpack --watch",
     "dev": "npm-run-all --parallel start webpack",
-    "build": "cd node_modules/substance/ && npm install && node make && cd ../.. && webpack --config webpack.config.production.js && ./node_modules/uglify-js/bin/uglifyjs dist/writer/substance/substance.js -o dist/writer/substance/substance.js && ./node_modules/uglify-js/bin/uglifyjs dist/writer/app.js -o dist/writer/app.js",
+    "build": "cd node_modules/substance/ && npm install && node make && cd ../.. && webpack --config webpack.config.production.js && ./node_modules/uglify-js/bin/uglifyjs dist/writer/substance/substance.js -o dist/writer/substance/substance.js",
+
     "build-substance": "cd node_modules/substance/ && npm install && node make",
     "build-dep": "cd node_modules/substance/ && npm install && node make",
     "reset": "rm -rf node_modules/; yarn cache clean; yarn install",
