--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "substance": "1.0.0-beta.6",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "ws": "1.1.1"
   },
   "scripts": {
     "start": "node server.js",
