--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "npm-run-all": "^3.1.0",
     "sass-loader": "^4.0.2",
     "sinon": "2.0.0-pre.3",
+    "source-map-support": "^0.4.11",
     "style-loader": "^0.13.1",
     "substance": "1.0.0-beta.6",
+    "substance-bundler": "^0.7.3",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2",
