--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "sass-loader": "^4.0.2",
     "sinon": "2.0.0-pre.3",
     "style-loader": "^0.13.1",
-    "substance": "substance/substance#beta-6-fixes",
+    "substance": "v1.0.0-beta.6.2",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
@@ -70,7 +70,7 @@
     "test-coverage": "jest --coverage",
     "webpack": "webpack --watch",
     "dev": "npm-run-all --parallel start webpack",
-    "build": "cd node_modules/substance/ && npm install && node make && cd ../.. && webpack --config webpack.config.production.js && ./node_modules/uglify-js/bin/uglifyjs dist/writer/substance/substance.js -o dist/writer/substance/substance.js",
+    "build": "webpack --config webpack.config.production.js && ./node_modules/uglify-js/bin/uglifyjs dist/writer/substance/substance.js -o dist/writer/substance/substance.js",
     "build-substance": "cd node_modules/substance/ && npm install && node make",
     "build-dep": "cd node_modules/substance/ && npm install && node make",
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
